mostrar imagen en la web

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Camara Web</title>
 </head>
 <body>
-    
+    <img src="php/subirImagen.php" class="img-thumbnail" alt="error imagen">
 </body>
 </html>
