--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Camara Web</title>
 </head>
+
 <body>
+    <img src="php/imagen_camara.png" class="img-thumbnail" alt="error imagen">
 </body>
+
 </html>
