--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Camara Web</title>
+    <script src="javascprit/actualizarImagen.js"></script>
 </head>
 
 <body>
-    <img src="php/imagen_camara.png" class="img-thumbnail" alt="error imagen">
+    <img src="php/imagen_camara.png" class="img-thumbnail" alt="error imagen" id="imagen">
 </body>
 
 </html>
