--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <img src="php/imagen_camara.png" class="img-thumbnail" alt="error imagen" id="imagen">
-</body>
+    <div id="contenedorImagen">
+    </div>
+    </body>
 
 </html>
