--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id="contenedorImagen">
+        <img src='php/imagen_camara.png' class='img-thumbnail' alt='error imagen' id='imagen'>
     </div>
     </body>
 </html>
