--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Camara Web</title>
     <script src="javascprit/actualizarImagen.js"></script>
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
     <div id="contenedorImagen">
-        <img src='php/imagen_camara.png' class='img-thumbnail' alt='error imagen' id='imagen'>
+        <img src='php/imagen_camara.png' class='background' id='imagen'>
     </div>
     </body>
 </html>
