--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="contenedorImagen">
-        <img src='php/imagen_camara.png' class='background' id='imagen'>
+        <img src='php/imagen_camara.png' class='fondo' id='imagen'>
     </div>
     </body>
 </html>
