--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id="contenedorImagen">
+    <div id="contenedorImagen" class="imagen">
         <img src='php/imagen_camara.png' class='imagen' id='imagen'>
     </div>
     </body>
