--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <div id="contenedorImagen" class="imagen">
+    <div id="contenedorImagen">
         <img src='php/imagen_camara.png' class='imagen' id='imagen'>
     </div>
-    </body>
+</body>
 </html>
